<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.pocketprinterdemo.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Space
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <Space
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="25dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Signup for news!"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50dp" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:showDividers="beginning|middle|end" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/nameEditRext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/NameHint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="357dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/EmailHint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/CommentsHint"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="26dp"
                android:layout_toRightOf="@+id/linearLayout1"
                android:text="@string/SignupBtnStr" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_marginLeft="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:text="Print somthing!"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" >

            <EditText
                android:id="@+id/printEditText"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.75"
                android:enabled="false"
                android:hint="@string/textInputHint" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/printEditText"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/printBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/printBtnText" />

                <Button
                    android:id="@+id/OpenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/OpenBtnTxt" />

                <Button
                    android:id="@+id/CloseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/CloseBtnTxt" />

            </LinearLayout>

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>